# modularsnf

./: .gitignore  AGENTS.md  CITATION.cff  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  publish.yml
crates/modularsnf/: Cargo.toml  build.rs
crates/modularsnf-py/: Cargo.toml
crates/modularsnf-py/src/: lib.rs
crates/modularsnf/benches/: bench_barrett.rs  bench_modulus.rs
crates/modularsnf/src/: band.rs  diagonal.rs  echelon.rs  lib.rs  ring.rs  snf.rs
docs/: PLAN.md  algorithm.md
modularsnf/: __init__.py  _rust.pyi  band.py  bandreduction.py  diagonal.py  diagonalization.py  echelon.py  matrix.py  ring.py  snf.py
scripts/: bench_modulus.py  profile_snf.py
src/: band.rs  diagonal.rs  echelon.rs  lib.rs  ring.rs  snf.rs
tests/: conftest.py  helpers.py  test_band.py  test_diagonalization.py  test_echelon.py  test_matrix.py  test_oracle.py  test_perf.py  test_regression.py  test_ring.py  test_snf.py
