[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "modularsnf"
version = "0.2.0"
description = "A Python module for Smith Normal Form calculations over Z/N rings"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.22"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "sympy"]
dev = ["maturin>=1.7,<2", "pytest", "pytest-cov", "ruff", "ty", "sympy"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -m 'not perf' --cov=modularsnf --cov-report=term-missing"
testpaths = [
    "tests",
]
markers = ["perf: performance sanity checks (run with: uv run pytest -m perf)"]

[tool.maturin]
module-name = "modularsnf._rust"
compatibility = "manylinux2014"

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E9"]
