[package]
name = "modularsnf-py"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
description = "Python bindings for modularsnf"
repository = "https://github.com/events555/modularsnf"
publish = false

[lib]
name = "_rust"
crate-type = ["cdylib"]

[features]
default = ["blas"]
blas = ["modularsnf/blas"]

[dependencies]
modularsnf = { path = "../modularsnf" }
pyo3 = { version = "0.24", features = ["abi3-py310", "extension-module"] }
numpy = "0.24"
ndarray = "0.16"
