[package]
name = "modularsnf"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
description = "Smith Normal Form calculations over Z/N rings"
repository = "https://github.com/events555/modularsnf"

[lib]
name = "modularsnf"

[dependencies]
ndarray = "0.16"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
rand_chacha = "0.3"

[[bench]]
name = "bench_modulus"
harness = false
