[package]
name = "modularsnf"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
description = "Smith Normal Form calculations over Z/N rings"
repository = "https://github.com/events555/modularsnf"

[lib]
name = "modularsnf"

[features]
blas = ["ndarray/blas", "dep:blas-src", "dep:openblas-src"]

[dependencies]
ndarray = "0.16"
blas-src = { version = "0.10", optional = true, features = ["openblas"] }
openblas-src = { version = "0.10", optional = true, features = ["system"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
rand_chacha = "0.3"

[[bench]]
name = "bench_modulus"
harness = false

[[bench]]
name = "bench_barrett"
harness = false
